--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -132,7 +132,7 @@ jobs:
           prerelease: false
           title: "🐙 OctoGram build: ${{ github.event.inputs.variant }}"
           files: |
-            OctoGram/TMessagesProj_App/build/outputs/apk/release/*.apk
+            OctoGram/TMessagesProj_App/build/outputs/apk/${{ github.event.inputs.variant }}/*.apk
 
   notify:
     name: Notify
