build-release: Change upload file path based on variant
Fixes: https://github.com/Lyceris-chan/OctoGramBuilder/pull/1/commits/3ea7896a209c5a7c614129b756935a0d287ee580

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -132,8 +132,8 @@ jobs:
           prerelease: false
           title: "🐙 OctoGram build: ${{ github.event.inputs.variant }}"
           files: |
-            OctoGram/TMessagesProj_App/build/outputs/apk/release/*.apk
-
+            OctoGram/TMessagesProj_App/build/outputs/apk/${{ github.event.inputs.variant }}/*.apk
+            
   notify:
     name: Notify
     needs: [build]
